--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Bricks666/MiniGame.git"
+    "url": "git+https://github.com/Bricks666/MiniGame"
   },
   "devtool": "inline-source-map",
   "scripts": {
