--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "MiniGame",
-  "version": "1.0.0",
-  "description": "Создаю игру по урокам, пытаясь понять, как со всем этим работать",
-  "main": "index.js",
-  "devtool": "inline-source-map",
-  "scripts": {
-    "dist": "webpack -w",
-    "start": "webpack serve --mode development --env development"
-  },
-  "author": "Bricks",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
-    "babel-loader": "^8.2.2",
-    "babel-polyfill": "^6.26.0",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "@webpack-cli/init": "^1.1.3",
-    "path": "^0.12.7"
-  }
+	"name": "MiniGame",
+	"version": "1.0.0",
+	"description": "Создаю игру по урокам, пытаясь понять, как со всем этим работать",
+	"main": "./dist/index.js",
+	"devtool": "inline-source-map",
+	"scripts": {
+		"start": "http-server ./dist",
+		"dev": "rollup -c ./rollup.config.js --watch",
+		"build": "rollup -c ./rollup.config.prod.js",
+		"lint": "eslint --ext .ts,.js src/",
+		"lint:fix": "eslint --ext .ts,.js src/ --fix"
+	},
+	"author": "Bricks",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "^7.18.9",
+		"@babel/preset-env": "^7.18.9",
+		"@babel/preset-typescript": "^7.18.6",
+		"@rollup/plugin-babel": "^5.3.1",
+		"@rollup/plugin-commonjs": "^22.0.1",
+		"@rollup/plugin-html": "^0.2.4",
+		"@rollup/plugin-image": "^2.1.1",
+		"@rollup/plugin-url": "^7.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.31.0",
+		"@typescript-eslint/parser": "^5.31.0",
+		"babel-loader": "^8.2.2",
+		"babel-polyfill": "^6.26.0",
+		"eslint": "^8.20.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-plugin-sonarjs": "^0.14.0",
+		"http-server": "^14.1.1",
+		"rollup": "^2.77.2",
+		"rollup-plugin-terser": "^7.0.2",
+		"rollup-plugin-typescript2": "^0.32.1",
+		"typescript": "^4.7.4"
+	}
 }
