--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "mini-game",
 	"version": "1.0.0",
 	"description": "Создаю игру по урокам, пытаясь понять, как со всем этим работать",
-	"main": "./dist/index.js",
+	"main": "./public/dist/index.js",
 	"devtool": "inline-source-map",
 	"scripts": {
-		"start": "http-server ./dist",
+		"start": "http-server ./public -c-1",
 		"dev": "rollup -c ./rollup.config.js --watch",
 		"build": "rollup -c ./rollup.config.prod.js",
 		"build:dev": "rollup -c ./rollup.config.js",
@@ -25,8 +25,6 @@
 		"@rollup/plugin-url": "^7.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.31.0",
 		"@typescript-eslint/parser": "^5.31.0",
-		"babel-loader": "^8.2.2",
-		"babel-polyfill": "^6.26.0",
 		"eslint": "^8.20.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-plugin-sonarjs": "^0.14.0",
