--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,4 @@
 {
-	"root": true,
 	"env": {
 		"browser": true,
 		"es2021": true
@@ -8,60 +7,83 @@
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:sonarjs/recommended",
-		"airbnb"
+		"plugin:import/recommended",
+		"plugin:import/warnings",
+		"plugin:import/typescript",
+		"airbnb",
+		"prettier"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
-		"project": "tsconfig.json",
-		"ecmaVersion": "latest"
+		"ecmaVersion": "latest",
+		"sourceType": "module"
 	},
-	"plugins": ["@typescript-eslint", "sonarjs"],
+	"plugins": ["react", "@typescript-eslint", "effector"],
 	"rules": {
-		"indent": ["warn", "tab", { "SwitchCase": 1 }],
-		"no-mixed-spaces-and-tabs": "warn",
-		"quotes": ["error", "single"],
-		"semi": ["warn", "always"],
-		"no-alert": "error",
-		"no-debugger": "warn",
-		"no-constructor-return": "error",
-		"no-duplicate-imports": "warn",
-		"no-promise-executor-return": "error",
-		"no-self-compare": "error",
-		"no-console": "warn",
+		/* STANDARD */
+		"no-use-before-define": "off",
 		"no-tabs": "off",
-		"no-restricted-exports": "off",
+		"indent": [
+			"error",
+			"tab",
+			{
+				"SwitchCase": 1
+			}
+		],
 		"jsx-quotes": ["error", "prefer-single"],
+		"linebreak-style": "off",
+		"no-param-reassign": "off",
+		"implicit-arrow-linebreak": "off",
+		"consistent-return": "off",
+		"no-unused-vars": "off",
+		"arrow-body-style": "off",
+		"object-curly-newline": "off",
 		"comma-dangle": [
 			"warn",
 			{
-				"arrays": "always",
+				"arrays": "never",
 				"objects": "always",
 				"imports": "never",
 				"exports": "never",
 				"functions": "never"
 			}
 		],
-		"consistent-return": "off",
-		"no-use-before-define": "off",
-		"arrow-body-style": "off",
-		"lines-between-class-members": "off",
-		"no-unused-vars": "off",
+		"no-restricted-exports": "off",
+		"prefer-arrow-callback": "off",
+		"no-shadow": "off",
+		"default-param-last": "warn",
 
-		/* IMPORRT */
+		/* REACT */
+		"react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }],
+		"react/jsx-props-no-spreading": "off",
+		"react/prop-types": "off",
+		"react/require-default-props": "off",
+		"react/jsx-indent": ["error", "tab"],
+		"react/jsx-indent-props": ["error", "tab"],
+		"react/function-component-definition": "off",
+		"react/no-unused-prop-types": "off",
+		"react/no-array-index-key": "off",
+
+		/* IMPORT */
 		"import/extensions": [
 			"error",
 			"never",
 			{
-				"png": "always"
+				"svg": "always",
+				"webp": "always",
+				"png": "always",
+				"jpeg": "always",
+				"jpg": "always",
+				"avif": "always",
+				"css": "always"
 			}
 		],
 		"import/no-unresolved": 0,
 		"import/prefer-default-export": "off",
 
-		/* TYPESCRIPT */
-		"@typescript-eslint/no-explicit-any": "warn",
-		"@typescript-eslint/no-empty-interface": "warn",
-		"@typescript-eslint/no-unused-vars": "error"
+		/* TS */
+		"@typescript-eslint/no-unused-vars": ["error"],
+		"@typescript-eslint/no-empty-interface": ["off"]
 	},
-	"ignorePatterns": ["*.config.*", "*.d.ts", "*.js"]
+	"ignorePatterns": ["templates/**/*", "*.css.d.ts", "configs/*"]
 }
