--- a/package.json
+++ b/package.json
@@ -4,36 +4,40 @@
 	"description": "Создаю игру по урокам, пытаясь понять, как со всем этим работать",
 	"main": "./public/dist/index.js",
 	"devtool": "inline-source-map",
+	"type": "module",
 	"scripts": {
-		"start": "http-server ./public -c-1",
+		"start": "http-server ./public -c -1",
 		"dev": "rollup -c ./rollup.config.js --watch",
 		"build": "rollup -c ./rollup.config.prod.js",
 		"build:dev": "rollup -c ./rollup.config.js",
 		"lint": "eslint --ext .ts,.js src/",
-		"lint:fix": "eslint --ext .ts,.js src/ --fix"
+		"lint:fix": "eslint --ext .ts,.js src/ --fix",
+		"prepare": "husky install",
+		"prettier": "npx prettier"
 	},
 	"author": "Bricks",
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/core": "^7.18.9",
-		"@babel/preset-env": "^7.18.9",
+		"@babel/core": "^7.20.12",
+		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-typescript": "^7.18.6",
-		"@rollup/plugin-babel": "^5.3.1",
-		"@rollup/plugin-commonjs": "^22.0.1",
-		"@rollup/plugin-html": "^0.2.4",
-		"@rollup/plugin-image": "^2.1.1",
-		"@rollup/plugin-url": "^7.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.31.0",
-		"@typescript-eslint/parser": "^5.31.0",
-		"eslint": "^8.20.0",
+		"@rollup/plugin-babel": "^6.0.3",
+		"@rollup/plugin-commonjs": "^24.0.0",
+		"@rollup/plugin-json": "^6.0.0",
+		"@types/node": "^18.11.18",
+		"@typescript-eslint/eslint-plugin": "^5.48.2",
+		"@typescript-eslint/parser": "^5.48.2",
+		"eslint": "^8.32.0",
 		"eslint-config-airbnb": "^19.0.4",
-		"eslint-plugin-sonarjs": "^0.14.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-sonarjs": "^0.18.0",
 		"http-server": "^14.1.1",
-		"rollup": "^2.77.2",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.1.0",
+		"rollup": "^3.10.0",
 		"rollup-plugin-terser": "^7.0.2",
-		"rollup-plugin-typescript2": "^0.32.1",
-		"typescript": "^4.7.4"
-	},
-	"dependencies": {
+		"rollup-plugin-typescript2": "^0.34.1",
+		"typescript": "^4.9.4"
 	}
 }
