--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 		},
 		"allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
 		"checkJs": true /* Enable error reporting in type-checked JavaScript files. */,
-		"moduleResolution": "NodeNext",
+		"moduleResolution": "Node",
 		"declaration": false /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
 		"declarationMap": false /* Create sourcemaps for d.ts files. */,
 		"emitDeclarationOnly": false /* Only output d.ts files and not JavaScript files. */,
@@ -20,8 +20,7 @@
 		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 		"resolveJsonModule": true,
 		"strict": true /* Enable all strict type-checking options. */,
-		"skipLibCheck": true /* Skip type checking all .d.ts files. */,
-		"typeRoots": ["node_modules/@types", "./src/types.d.ts"]
+		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
 	"exclude": ["node_modules", "dist"],
 	"include": ["src/**/*"]
