--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
 		"plugin:import/recommended",
 		"plugin:import/warnings",
 		"plugin:import/typescript",
-		"airbnb",
+		"airbnb-base",
 		"prettier"
 	],
 	"parser": "@typescript-eslint/parser",
