--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
 		"@rollup/plugin-babel": "^6.0.3",
 		"@rollup/plugin-commonjs": "^24.0.0",
 		"@rollup/plugin-json": "^6.0.0",
+		"@rollup/plugin-terser": "^0.3.0",
 		"@types/node": "^18.11.18",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"@typescript-eslint/parser": "^5.48.2",
 		"eslint": "^8.32.0",
-		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-sonarjs": "^0.18.0",
@@ -36,7 +37,6 @@
 		"husky": "^8.0.3",
 		"lint-staged": "^13.1.0",
 		"rollup": "^3.10.0",
-		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.34.1",
 		"typescript": "^4.9.4"
 	}
