--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
 	"version": "1.0.0",
 	"description": "Создаю игру по урокам, пытаясь понять, как со всем этим работать",
 	"main": "./public/dist/index.js",
-	"devtool": "inline-source-map",
 	"type": "module",
 	"scripts": {
-		"start": "http-server ./public -c -1",
-		"dev": "rollup -c ./rollup.config.js --watch",
-		"build": "rollup -c ./rollup.config.prod.js",
-		"build:dev": "rollup -c ./rollup.config.js",
+		"dev": "vite",
+		"build": "tsc && vite build",
 		"lint": "eslint --ext .ts,.js src/",
 		"lint:fix": "eslint --ext .ts,.js src/ --fix",
 		"prepare": "husky install",
@@ -22,9 +19,6 @@
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-typescript": "^7.18.6",
 		"@rollup/plugin-babel": "^6.0.3",
-		"@rollup/plugin-commonjs": "^24.0.0",
-		"@rollup/plugin-json": "^6.0.0",
-		"@rollup/plugin-terser": "^0.3.0",
 		"@types/node": "^18.11.18",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"@typescript-eslint/parser": "^5.48.2",
@@ -33,11 +27,9 @@
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-sonarjs": "^0.18.0",
-		"http-server": "^14.1.1",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.1.0",
-		"rollup": "^3.10.0",
-		"rollup-plugin-typescript2": "^0.34.1",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+		"vite": "^4.0.4"
 	}
 }
