--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint-plugin-sonarjs": "^0.18.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.1.0",
+		"prettier": "^2.8.3",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
 	}
