--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
 	"*.(ts|js)": [
-		"prettier --write --ignore-unknown --config ./.prettierrc src",
+		"prettier --write --ignore-unknown --config ./.prettierrc",
 		"eslint --fix -c ./.eslintrc.json"
 	]
 }
