--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
 		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 		"resolveJsonModule": true,
 		"strict": true /* Enable all strict type-checking options. */,
-		"skipLibCheck": true /* Skip type checking all .d.ts files. */
+		"skipLibCheck": true /* Skip type checking all .d.ts files. */,
+		"experimentalDecorators": true
 	},
 	"exclude": ["node_modules", "dist"],
 	"include": ["src/**/*"]
