--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"prettier": "^2.8.3",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
+	},
+	"dependencies": {
+		"eventemitter3": "^5.0.0"
 	}
 }
